# laba4os

./: CMakeLists.txt  image  laba4.cpp
